Better commenting in code and better folder structure and a config test.

--- a/research/notebooks/view_latent.ipynb
+++ b/research/notebooks/view_latent.ipynb
@@ -12,7 +12,7 @@
     "import torchvision\n",
     "import sys\n",
     "sys.path.append(\"../\")\n",
-    "from conv_ae import Model\n",
+    "from vae import Model\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from edflow.hooks.checkpoint_hooks.common import get_latest_checkpoint\n",
@@ -113,7 +113,7 @@
     "    z = torch.zeros([num_images,config[\"linear\"][\"latent_dim\"]], dtype=torch.float).to(device)\n",
     "    for i in range(num_images):\n",
     "        z[i] = pc * x[i]\n",
-    "    img = vae.sample_gaus(z)\n",
+    "    img = vae.latent_sample(z)\n",
     "    img = img.detach().cpu().permute([0,2,3,1]).numpy()\n",
     "    img = (img + 1)/2\n",
     "    final = np.hstack(img)\n",
@@ -153,7 +153,7 @@
     "    for j in range(num_images_y):\n",
     "        for i in range(num_images_x):\n",
     "            z[i] = pc1 * x1[i] + pc2 * x2[j]\n",
-    "        img = vae.sample_gaus(z)\n",
+    "        img = vae.latent_sample(z)\n",
     "        img = img.detach().cpu().permute([0,2,3,1]).numpy()\n",
     "        img = (img + 1)/2\n",
     "        h_final.append(np.hstack(img))\n",
@@ -290,7 +290,7 @@
     "    z = torch.zeros([numb_images,config[\"linear\"][\"latent_dim\"]], dtype=torch.float).to(device)\n",
     "    for i in range(numb_images):\n",
     "        z[i] = pc * xx[i]\n",
-    "    img = vae.sample_gaus(z)\n",
+    "    img = vae.latent_sample(z)\n",
     "    img = img.detach().cpu().permute([0,2,3,1]).numpy()\n",
     "    img = (img + 1)/2\n",
     "    img = img_as_ubyte(img)\n",
@@ -299,7 +299,7 @@
     "    if loop_gif:\n",
     "        for i in range(numb_images):\n",
     "            z[i] = pc * xx[-i-1]\n",
-    "        img = vae.sample_gaus(z)\n",
+    "        img = vae.latent_sample(z)\n",
     "        img = img.detach().cpu().permute([0,2,3,1]).numpy()\n",
     "        img = (img + 1)/2\n",
     "        img = img_as_ubyte(img)\n",
